# Hospital-Emergency-Department-Simulator

./: CMakeLists.txt  Patient.cpp  Patient.h  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
Application/: admission.csv
SourceCode/: CMakeLists.txt  Patient.cpp  Patient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
